# nm-ai-zypp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-addition.md
.github/workflows/: _example_deploy_docker_image.yaml  ci.yaml
data/astar_island/live_round7_20260320T141208Z/: run_manifest.json
data/astar_island/live_round7_baseline_20260320T141749Z/: predictions.json  round_summary.json  run_manifest.json  submission_receipts.json
data/astar_island/live_round8_20260320T171338Z/: observations.json  predictions.json  round_summary.json  run_manifest.json  submission_receipts.json
scripts/: build_api_index.py
src/: __init__.py  main.py
src/ai_accounting_agent/: OPERATIONS.md  README.md  __init__.py  agent.py  agent_capabilities.md  api_index.py  api_index_data.json  gemini.py  main.py  query_api.py  schemas.py  task.md  telemetry.py  tripletex_api.md  tripletex_client.py  tripletex_tools.py
src/ai_accounting_agent/tests/: __init__.py  _analyze_logs.py  evaluator_scenarios.py  live_api_support.py  test_agent.py  test_api.py  test_fallback_tools.py  (+9 more)
src/astar_island/: README.md  STRATEGY.md  __init__.py  backtest.py  batch.py  cli.py  client.py  cloud.py  config.py  delivery.py  models.py  planner.py  predictor.py  storage.py  terrain.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
tmp/astar_backtest_local/: backtest_summary.json
tmp/astar_backtest_round7/: backtest_summary.json
tmp/astar_backtest_round8/: backtest_summary.json
(+92 files in other folders)
